--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -15,63 +15,29 @@
             </div>
         </div>
     </div>
-    <div class="col-md-8">
-        <div class="card shadow my-3">
-            <div class="crad-body">
-                <div class="row">
-                    <div class="col-md-4">
-                        <img src="" alt="img">
-                    </div>
-                    <div class="col-md-8">
-                        <small>20th june 2024</small>
-                        <hr>
-                        <a class="h3" href="">First Post</a>
-                        <p class="text-justify my-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius facere officiis eveniet, earum id delectus explicabo ducimus pariatur, temporibus ratione beatae fugiat repudiandae harum quam iure doloribus possimus, nesciunt illo!
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <div class="col-md-8 ">
+        {% for post in posts %}
         <div class="card shadow my-3">
-            <div class="crad-body">
+            <div class="card-body">
                 <div class="row">
                     <div class="col-md-4">
                         <img src="" alt="img">
                     </div>
                     <div class="col-md-8">
-                        <small>20th june 2024</small>
+                        <small>{{ post.date_created }}</small>
                         <hr>
-                        <a class="h3" href="">First Post</a>
+                        <a class="h3" href="">{{ post.title }}</a>
                         <p class="text-justify my-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius facere officiis eveniet, earum id delectus explicabo ducimus pariatur, temporibus ratione beatae fugiat repudiandae harum quam iure doloribus possimus, nesciunt illo!
+                           {{ post.content }}
                         </p>
                     </div>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
-    <div class="col-md-8">
-        <div class="card shadow my-3">
-            <div class="crad-body">
-                <div class="row">
-                    <div class="col-md-4">
-                        <img src="" alt="img">
-                    </div>
-                    <div class="col-md-8">
-                        <small>20th june 2024</small>
-                        <hr>
-                        <a class="h3" href="">First Post</a>
-                        <p class="text-justify my-3">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eius facere officiis eveniet, earum id delectus explicabo ducimus pariatur, temporibus ratione beatae fugiat repudiandae harum quam iure doloribus possimus, nesciunt illo!
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
 </div>
 
 {% endblock content %}
