--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,4 +1,5 @@
 {% extends "partials/base.html" %}
+{% comment %} {% load crispy_forms_tags %} {% endcomment %}
 
 {% block title %}{% endblock title %}
 
@@ -9,7 +10,12 @@
             <div class="card my-3 shadow">
                 <div class="card-body">
                     <h3>
-                        form
+                        <form method="POST">
+                            {% csrf_token %}
+                            {% comment %} {{ form|crispy }} {% endcomment %}
+                            {{ form }}
+                            <input class="btn btn-primary btn-block" type="submit" value="Post">
+                        </form>
                     </h3>
                 </div>
             </div>
