--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -14,7 +14,7 @@
     <!--Custome CSS-->
     <link rel="stylesheet" href="{% static '/style.css' %}">
 
-    <title>{ </title>
+    <title> {% block title %}{% endblock title %} </title>
 </head>
 
 <body>
