--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,7 +1,7 @@
 {% extends "partials/base.html" %}
 {% comment %} {% load crispy_forms_tags %} {% endcomment %}
 
-{% block title %}{% endblock title %}
+{% block title %} HOME PAGE {% endblock title %}
 
 {% block content %}
 <div class="container">
@@ -20,30 +20,28 @@
                 </div>
             </div>
         </div>
-    </div>
-    
-    <div class="col-md-8 ">
-        {% for post in posts %}
-        <div class="card shadow my-3">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-4">
-                        <img src="" alt="img">
-                    </div>
-                    <div class="col-md-8">
-                        <small>{{ post.date_created }}</small>
-                        <hr>
-                        <a class="h3" href="">{{ post.title }}</a>
-                        <p class="text-justify my-3">
-                           {{ post.content }}
-                        </p>
+        <div class="col-md-8 ">
+            {% for post in posts %}
+            <div class="card shadow my-3">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img src="" alt="img">
+                        </div>
+                        <div class="col-md-8">
+                            <small>{{ post.date_created }}</small>
+                            <hr>
+                            <a class="h3" href="">{{ post.title }}</a>
+                            <p class="text-justify my-3">
+                               {{ post.content }}
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
+            {% endfor %}
         </div>
-        {% endfor %}
-    </div>
-    
+    </div>    
 </div>
 
 {% endblock content %}
