--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-primary bg-primary fixed-top">
     <div class="container">
-        {% comment %} {% if request.user.is_authenticated %} {% endcomment %}
+        {% if request.user.is_authenticated %}
         <a class="navbar-brand text-white" href="{% url 'blog-index' %}">BloggingWebsite</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,20 +14,24 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Logout</a>
+                    <form method="post" action="{% url 'users-logout' %}">
+                        {% csrf_token %}
+                        <button type="submit">logout</button>
+                    </form>
+                        {% comment %} <a class="nav-link text-white" href="{% url 'users-logout' %}">Logout</a> {% endcomment %}
                 </li>
             </ul>
-            {% comment %} {% else %} {% endcomment %}
+            {% else %}
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="#">Sign Up <span
+                    <a class="nav-link text-white" href="{% url 'users-sign-up' %}">Sign Up <span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Login</a>
+                    <a class="nav-link text-white" href="{% url 'users-login' %}">Login</a>
                 </li>
             </ul>
-            {% comment %} {% endif %} {% endcomment %}
+            {% endif %}
         </div>
     </div>
 </nav>
