--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -4,32 +4,32 @@
 {% block title %} LOGIN PAGE {% endblock title %}
 
 {% block content %}
-<div class="container">
-    <div class="row mt-5 pt-3">
-        <div class="col-md-5 offset-md-6">
-            <div class="card my-3 shadow">
-                <div class="card-body">
-                    <h4>Login Page</h4>
-                    <hr>
-                    <form method="POST">
-                        {% csrf_token %}
-                        {% comment %} {{ form|crispy }} {% endcomment %}
-                        {{ form }}
-                        <input class="btn btn-primary btn-block" type="submit" value="Login">
-                    </form>
-                    <div class="text-center my-3">
-                        <a href="">Forget Password</a>
-                    </div>
-                    <hr>
-                    <div class="text-center ">
-                        <a class="btn btn-success" href="{% url 'users-sign-up' %}">Create An Account</a>
+<div class="cover">
+    <div class="container">
+        <div class="row mt-5 pt-3">
+            <div class="col-md-5 offset-md-6">
+                <div class="card my-3 shadow">
+                    <div class="card-body">
+                        <h4>Login Page</h4>
+                        <hr>
+                        <form method="POST">
+                            {% csrf_token %}
+                            {% comment %} {{ form|crispy }} {% endcomment %}
+                            {{ form }}
+                            <input class="btn btn-primary btn-block" type="submit" value="Login">
+                        </form>
+                        <div class="text-center my-3">
+                            <a href="">Forget Password</a>
+                        </div>
+                        <hr>
+                        <div class="text-center ">
+                            <a class="btn btn-success" href="{% url 'users-sign-up' %}">Create An Account</a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>   
     </div>
-    
-    
 </div>
 
 {% endblock content %}
