--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -52,7 +52,9 @@
                     </div>
                     <div class="col-md-8">
                         <form method="POST" enctype="multipart/form-data">
-                            
+                            {% csrf_token %}
+                            {{ u_form }}
+                            {{ p_form }}
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary btn-sm"
                                     data-dismiss="modal">Cancel</button>
