--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -4,6 +4,7 @@
 {% block title %} HOME PAGE {% endblock title %}
 
 {% block content %}
+hey
 <div class="container">
     <div class="row mt-5 pt-3">
         <div class="col-md-4">
@@ -26,12 +27,12 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-4">
-                            <img src="" alt="img">
+                            <img class="img-thumbnail" src="{{ post.author.profilemodel.image.url }}" alt="img">
                         </div>
                         <div class="col-md-8">
                             <small>{{ post.date_created }}</small>
                             <hr>
-                            <a class="h3" href="">{{ post.title }}</a>
+                            <a class="h3" href="{% url 'blog-post-detail' post.id %}">{{ post.title }}</a>
                             <p class="text-justify my-3">
                                {{ post.content }}
                             </p>
