--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -26,14 +26,29 @@
                             </p>
                         </div>
                     </div>
+                    <p class="mt-3">
+                        <a class="" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                          Comments: {{ post.comment_count }}
+                        </a>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                    <div style="height:250px; over-flow-y:scroll;" class="card card-body">
+                        {% for comment in post.comments %}
+                        <p class="text-justify">
+                            {{ comment.content }}
+                        </p>
+                        {% endfor %}
+                    </div>
+                    </div>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ c_form }}
+                        <input class="btn btn-primary" type="submit" value="Comment">
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="col-md-8 ">
-            {% for post in posts %}
-            
-            {% endfor %}
-        </div>
+        
     </div>    
 </div>
 
