--- a/templates/users/password_reset.html
+++ b/templates/users/password_reset.html
@@ -1,35 +1,31 @@
 {% extends "partials/base.html" %}
 {% comment %} {% load crispy_forms_tags %} {% endcomment %}
 
-{% block title %} LOGIN PAGE {% endblock title %}
+{% block title %} Password Reset PAGE {% endblock title %}
 
 {% block content %}
-<div class="cover">
     <div class="container">
         <div class="row mt-5 pt-3">
-            <div class="col-md-5 offset-md-6">
+            <div class="col-md-8 offset-md-2">
                 <div class="card my-3 shadow">
                     <div class="card-body">
-                        <h4>Login Page</h4>
+                        <h4>Password Reset Page</h4>
                         <hr>
+                        <div class="alert alert-info">
+                            Enter email and a mail will instructions to reset password
+                        </div>
                         <form method="POST">
                             {% csrf_token %}
                             {% comment %} {{ form|crispy }} {% endcomment %}
                             {{ form }}
-                            <input class="btn btn-primary btn-block" type="submit" value="Login">
+                            <input class="btn btn-primary btn-block" type="submit" value="Reset Password">
                         </form>
-                        <div class="text-center my-3">
-                            <a href="{% url 'password_reset' %}">Forget Password</a>
-                        </div>
-                        <hr>
-                        <div class="text-center ">
-                            <a class="btn btn-success" href="{% url 'users-sign-up' %}">Create An Account</a>
-                        </div>
+                        
+                        
                     </div>
                 </div>
             </div>
         </div>   
     </div>
-</div>
 
 {% endblock content %}
