--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -35,7 +35,14 @@
                     <div style="height:250px; over-flow-y:scroll;" class="card card-body">
                         {% for comment in post.comments %}
                         <p class="text-justify">
-                            {{ comment.content }}
+                            <div class="row">
+                                <div class="col-md-3">
+                                    {{ comment.user.username }}
+                                </div>
+                                <div class="col-md-9">
+                                    {{ comment.content }}
+                                </div>
+                            </div>
                         </p>
                         {% endfor %}
                     </div>
